# beetiful

./: .envsample  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yaml
beetiful/: __init__.py
beetiful/static/css/: style.css
beetiful/static/js/: library.js  main.js
beetiful/templates/: index.html
beets-config/: config.yaml
static/js/: main.js
tests/: test_config_api.py  test_env_flag.py  test_frontend_safety.py  test_library_guard.py  test_library_items.py  test_routes.py  test_startup.py
